header we are gamer hero section fully responsive done ok!

--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@
           <h1 class="hero-title big-fo-size">G.O.A.T.</h1>
           <ul class="hero-content-list">
             <li>
-                <div>
-                    <img src="./images/icons8-download-64.png" alt="">
-                    <p>1-Click instant play</p>
-                </div>
+              <div>
+                <img src="./images/icons8-download-64.png" alt="" />
+                <p>1-Click instant play</p>
+              </div>
             </li>
             <li>
-                <div>
-                    <img src="./images/icons8-play-64.png" alt="">
-                    <p>No Download</p>
-                </div>
+              <div>
+                <img src="./images/icons8-play-64.png" alt="" />
+                <p>No Download</p>
+              </div>
             </li>
             <li>
-                <div>
-                    <img src="images/vector60-7915-01.jpg" alt="">
-                    <p>1000s of supported online games</p>
-                </div>
+              <div>
+                <img src="images/vector60-7915-01.jpg" alt="" />
+                <p>1000s of supported online games</p>
+              </div>
             </li>
           </ul>
           <div class="btn-container">
@@ -129,7 +129,21 @@
           </div>
         </div>
         <div class="img-content">
-            <img src="./images/Group 18.png" alt="" srcset="">
+          <img src="./images/Group 18.png" alt="" srcset="" />
+        </div>
+      </section>
+
+      <section class="we-r-gamer">
+        <div class="content-img">
+            <img src="./images/pngwing 4.png" alt="" srcset="">
+        </div>
+        <div class="content-text">
+            <h2 style="margin: 0 !important;" class="semi-big-fo-size hero-title">We are gamer</h2>
+            <br />
+            <p class="sm-fo-size t-end w-r-g-pl">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+            <button class="btn1 primary-button">SIGN IN</button>
+            <p>Our purpose...</p>
+            <h3 class="semi-big-font-size">“unleash the gamer in everyone”</h3>
         </div>
       </section>
     </main>
