video player section done

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     ------====================-->
 
     <main>
+      <!-- start -->
       <section class="hero-part">
         <div class="text-content">
           <h2 class="semi-big-fo-size">PLAY LIKE THE</h2>
@@ -132,18 +133,71 @@
           <img src="./images/Group 18.png" alt="" srcset="" />
         </div>
       </section>
-
+      <!-- we are gammer start -->
       <section class="we-r-gamer">
         <div class="content-img">
-            <img src="./images/pngwing 4.png" alt="" srcset="">
+          <img src="./images/pngwing 4.png" alt="" srcset="" />
         </div>
         <div class="content-text">
-            <h2 style="margin: 0 !important;" class="semi-big-fo-size hero-title">We are gamer</h2>
-            <br />
-            <p class="sm-fo-size t-end w-r-g-pl">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
-            <button class="btn1 primary-button">SIGN IN</button>
-            <p>Our purpose...</p>
-            <h3 class="semi-big-font-size">“unleash the gamer in everyone”</h3>
+          <h2 style="margin: 0 !important" class="semi-big-fo-size hero-title">
+            We are gamer
+          </h2>
+          <br />
+          <p class="sm-fo-size t-end w-r-g-pl">
+            An international digital games and entertainment company. We
+            develop, publish and distribute multiplayer mobile games. We reach
+            over 400 million players each month and our audience keeps growing.
+          </p>
+          <button class="btn1 primary-button">SIGN IN</button>
+          <p>Our purpose...</p>
+          <h3 class="semi-big-font-size">“unleash the gamer in everyone”</h3>
+        </div>
+      </section>
+
+      <!--  funny games videos-->
+
+      <section class="game-video">
+        <h2 class="semi-big-fo-size">
+          Online Games <span class="hero-title">Funny Videos</span>
+        </h2>
+        <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+        <div class="grid-videos">
+          <div class="video-card">
+            <div class="card-img">
+              <img src="images/Rectangle 4.png" alt="" />
+              <div class="v-card-hover-effect">
+                <img src="./images/icons8-play-64.png" alt="" srcset="" />
+              </div>
+            </div>
+            <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+          </div>
+          <div class="video-card">
+            <div class="card-img">
+              <img src="images/Rectangle 5.png" alt="" />
+              <div class="v-card-hover-effect">
+                <img src="./images/icons8-play-64.png" alt="" srcset="" />
+              </div>
+            </div>
+            <p>Did you score? #unblockedgames #school</p>
+          </div>
+          <div class="video-card">
+            <div class="card-img">
+              <img src="images/Rectangle 6.png" alt="" />
+              <div class="v-card-hover-effect">
+                <img src="./images/icons8-play-64.png" alt="" srcset="" />
+              </div>
+            </div>
+            <p>Breaking game records like OG</p>
+          </div>
+          <div class="video-card">
+            <div class="card-img">
+              <img src="images/Rectangle 7.png" alt="" />
+              <div class="v-card-hover-effect">
+                <img src="./images/icons8-play-64.png" alt="" srcset="" />
+              </div>
+            </div>
+            <p>Busted gaming on school laptop, but you are still lit.</p>
+          </div>
         </div>
       </section>
     </main>
