--- a/index.html
+++ b/index.html
@@ -200,6 +200,51 @@
           </div>
         </div>
       </section>
+
+      <!-- play instantly -->
+      <section class="playinstantly">
+        <div class="instacontent-text">
+          <h2 class=" semi-big-fo-size playInst-title">
+            <span class="primary-text"> Play Instantly,  </span> <br>
+            No Downloads <br> No Installs.
+          </h2>
+
+          <p class="playInst-des">
+            Play games online for free without downloading. Just click the Play
+            button and play instantly in your browser.
+          </p>
+        </div>
+        <div class="instcontent-img">
+          <img class="image1" src="./images/Rectangle 55.png" alt="" />
+          <img class="image2" src="./images/Rectangle 66.png" alt="" srcset="">
+        </div>
+      </section>
+      <section class="playinstantly">
+     
+        <div class="playgame-img">
+          <img class="image1" src="./images/Rectangle 67.png" alt="" />
+          <img class="image2" src="./images/Rectangle 78.png" alt="" srcset="">
+        </div>
+        <div class="playgame-text">
+          <h2 class=" semi-big-fo-size playInst-title">
+            <span class="primary-text"> Play Games </span> <br>
+             <span class="primary-text">Online  </span>   Anywhere, Anytime!
+          </h2>
+      
+          <p class="playInst-des">
+            PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.
+          </p>
+        </div>
+      </section>
+
+      <section class="multiple-game">
+        <div class="multiple-game-features">
+          <div class="features">
+            <img src="./images/Rectangle 11.png" alt="" srcset="">
+            <h5>Action Games</h5>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--===============================
