--- a/index.html
+++ b/index.html
@@ -204,9 +204,10 @@
       <!-- play instantly -->
       <section class="playinstantly">
         <div class="instacontent-text">
-          <h2 class=" semi-big-fo-size playInst-title">
-            <span class="primary-text"> Play Instantly,  </span> <br>
-            No Downloads <br> No Installs.
+          <h2 class="semi-big-fo-size playInst-title">
+            <span class="primary-text"> Play Instantly, </span> <br />
+            No Downloads <br />
+            No Installs.
           </h2>
 
           <p class="playInst-des">
@@ -216,23 +217,34 @@
         </div>
         <div class="instcontent-img">
           <img class="image1" src="./images/Rectangle 55.png" alt="" />
-          <img class="image2" src="./images/Rectangle 66.png" alt="" srcset="">
+          <img
+            class="image2"
+            src="./images/Rectangle 66.png"
+            alt=""
+            srcset=""
+          />
         </div>
       </section>
       <section class="playinstantly">
-     
         <div class="playgame-img">
           <img class="image1" src="./images/Rectangle 67.png" alt="" />
-          <img class="image2" src="./images/Rectangle 78.png" alt="" srcset="">
+          <img
+            class="image2"
+            src="./images/Rectangle 78.png"
+            alt=""
+            srcset=""
+          />
         </div>
         <div class="playgame-text">
-          <h2 class=" semi-big-fo-size playInst-title">
-            <span class="primary-text"> Play Games </span> <br>
-             <span class="primary-text">Online  </span>   Anywhere, Anytime!
+          <h2 class="semi-big-fo-size playInst-title">
+            <span class="primary-text"> Play Games </span> <br />
+            <span class="primary-text">Online </span> Anywhere, Anytime!
           </h2>
-      
+
           <p class="playInst-des">
-            PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.
+            PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you
+            can play your favorite games online for free, any time, anywhere ,
+            on any device.
           </p>
         </div>
       </section>
@@ -240,7 +252,39 @@
       <section class="multiple-game">
         <div class="multiple-game-features">
           <div class="features">
-            <img src="./images/Rectangle 11.png" alt="" srcset="">
+            <img src="./images/Rectangle 11.png" alt="" srcset="" />
+            <h5>Action Games</h5>
+          </div>
+          <div class="features">
+            <img src="./images/Rectangle 12.png" alt="" srcset="" />
+            <h5>Action Games</h5>
+          </div>
+          <div class="features">
+            <img src="./images/Rectangle 13.png" alt="" srcset="" />
+            <h5>Action Games</h5>
+          </div>
+          <div class="features">
+            <img src="./images/Rectangle 14.png" alt="" srcset="" />
+            <h5>Action Games</h5>
+          </div>
+          <div class="features">
+            <img src="./images/Rectangle 15.png" alt="" srcset="" />
+            <h5>Action Games</h5>
+          </div>
+          <div class="features">
+            <img src="./images/Rectangle 16.png" alt="" srcset="" />
+            <h5>Action Games</h5>
+          </div>
+          <div class="features">
+            <img src="./images/Rectangle 17.png" alt="" srcset="" />
+            <h5>Action Games</h5>
+          </div>
+          <div class="features">
+            <img src="./images/Rectangle 18.png" alt="" srcset="" />
+            <h5>Action Games</h5>
+          </div>
+          <div class="features">
+            <img src="./images/Rectangle 19.png" alt="" srcset="" />
             <h5>Action Games</h5>
           </div>
         </div>
@@ -255,7 +299,158 @@
         ========FOOTER PART START
     ------====================-->
 
-    <footer></footer>
+    <footer>
+      <div class="footer-section sm-fo-size">
+        <div>
+          <img src="./images/Frame.png" alt="" srcset="" />
+        </div>
+        <div class="footer-icon md-font-size">
+          <h6>Our Story</h6>
+          <h6>Games</h6>
+          <h6>web Games</h6>
+          <h6>Careers</h6>
+          <h6>Support</h6>
+          <h6>My Account</h6>
+        </div>
+        <div class="footer-icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            x="0px"
+            y="0px"
+            width="100"
+            height="100"
+            viewBox="0 0 48 48"
+          >
+            <path
+              fill="#039be5"
+              d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z"
+            ></path>
+            <path
+              fill="#fff"
+              d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"
+            ></path>
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            x="0px"
+            y="0px"
+            width="100"
+            height="100"
+            viewBox="0 0 48 48"
+          >
+            <path
+              fill="#FF3D00"
+              d="M43.2,33.9c-0.4,2.1-2.1,3.7-4.2,4c-3.3,0.5-8.8,1.1-15,1.1c-6.1,0-11.6-0.6-15-1.1c-2.1-0.3-3.8-1.9-4.2-4C4.4,31.6,4,28.2,4,24c0-4.2,0.4-7.6,0.8-9.9c0.4-2.1,2.1-3.7,4.2-4C12.3,9.6,17.8,9,24,9c6.2,0,11.6,0.6,15,1.1c2.1,0.3,3.8,1.9,4.2,4c0.4,2.3,0.9,5.7,0.9,9.9C44,28.2,43.6,31.6,43.2,33.9z"
+            ></path>
+            <path fill="#FFF" d="M20 31L20 17 32 24z"></path>
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            x="0px"
+            y="0px"
+            width="100"
+            height="100"
+            viewBox="0 0 48 48"
+          >
+            <path
+              fill="#212121"
+              fill-rule="evenodd"
+              d="M10.904,6h26.191C39.804,6,42,8.196,42,10.904v26.191 C42,39.804,39.804,42,37.096,42H10.904C8.196,42,6,39.804,6,37.096V10.904C6,8.196,8.196,6,10.904,6z"
+              clip-rule="evenodd"
+            ></path>
+            <path
+              fill="#ec407a"
+              fill-rule="evenodd"
+              d="M29.208,20.607c1.576,1.126,3.507,1.788,5.592,1.788v-4.011 c-0.395,0-0.788-0.041-1.174-0.123v3.157c-2.085,0-4.015-0.663-5.592-1.788v8.184c0,4.094-3.321,7.413-7.417,7.413 c-1.528,0-2.949-0.462-4.129-1.254c1.347,1.376,3.225,2.23,5.303,2.23c4.096,0,7.417-3.319,7.417-7.413L29.208,20.607L29.208,20.607 z M30.657,16.561c-0.805-0.879-1.334-2.016-1.449-3.273v-0.516h-1.113C28.375,14.369,29.331,15.734,30.657,16.561L30.657,16.561z M19.079,30.832c-0.45-0.59-0.693-1.311-0.692-2.053c0-1.873,1.519-3.391,3.393-3.391c0.349,0,0.696,0.053,1.029,0.159v-4.1 c-0.389-0.053-0.781-0.076-1.174-0.068v3.191c-0.333-0.106-0.68-0.159-1.03-0.159c-1.874,0-3.393,1.518-3.393,3.391 C17.213,29.127,17.972,30.274,19.079,30.832z"
+              clip-rule="evenodd"
+            ></path>
+            <path
+              fill="#fff"
+              fill-rule="evenodd"
+              d="M28.034,19.63c1.576,1.126,3.507,1.788,5.592,1.788v-3.157 c-1.164-0.248-2.194-0.856-2.969-1.701c-1.326-0.827-2.281-2.191-2.561-3.788h-2.923v16.018c-0.007,1.867-1.523,3.379-3.393,3.379 c-1.102,0-2.081-0.525-2.701-1.338c-1.107-0.558-1.866-1.705-1.866-3.029c0-1.873,1.519-3.391,3.393-3.391 c0.359,0,0.705,0.056,1.03,0.159V21.38c-4.024,0.083-7.26,3.369-7.26,7.411c0,2.018,0.806,3.847,2.114,5.183 c1.18,0.792,2.601,1.254,4.129,1.254c4.096,0,7.417-3.319,7.417-7.413L28.034,19.63L28.034,19.63z"
+              clip-rule="evenodd"
+            ></path>
+            <path
+              fill="#81d4fa"
+              fill-rule="evenodd"
+              d="M33.626,18.262v-0.854c-1.05,0.002-2.078-0.292-2.969-0.848 C31.445,17.423,32.483,18.018,33.626,18.262z M28.095,12.772c-0.027-0.153-0.047-0.306-0.061-0.461v-0.516h-4.036v16.019 c-0.006,1.867-1.523,3.379-3.393,3.379c-0.549,0-1.067-0.13-1.526-0.362c0.62,0.813,1.599,1.338,2.701,1.338 c1.87,0,3.386-1.512,3.393-3.379V12.772H28.095z M21.635,21.38v-0.909c-0.337-0.046-0.677-0.069-1.018-0.069 c-4.097,0-7.417,3.319-7.417,7.413c0,2.567,1.305,4.829,3.288,6.159c-1.308-1.336-2.114-3.165-2.114-5.183 C14.374,24.749,17.611,21.463,21.635,21.38z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            x="0px"
+            y="0px"
+            width="100"
+            height="100"
+            viewBox="0 0 48 48"
+          >
+            <path
+              fill="#039be5"
+              d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z"
+            ></path>
+            <path
+              fill="#fff"
+              d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"
+            ></path>
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            x="0px"
+            y="0px"
+            width="100"
+            height="100"
+            viewBox="0 0 48 48"
+          >
+            <path
+              fill="#FF3D00"
+              d="M43.2,33.9c-0.4,2.1-2.1,3.7-4.2,4c-3.3,0.5-8.8,1.1-15,1.1c-6.1,0-11.6-0.6-15-1.1c-2.1-0.3-3.8-1.9-4.2-4C4.4,31.6,4,28.2,4,24c0-4.2,0.4-7.6,0.8-9.9c0.4-2.1,2.1-3.7,4.2-4C12.3,9.6,17.8,9,24,9c6.2,0,11.6,0.6,15,1.1c2.1,0.3,3.8,1.9,4.2,4c0.4,2.3,0.9,5.7,0.9,9.9C44,28.2,43.6,31.6,43.2,33.9z"
+            ></path>
+            <path fill="#FFF" d="M20 31L20 17 32 24z"></path>
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            x="0px"
+            y="0px"
+            width="100"
+            height="100"
+            viewBox="0 0 48 48"
+          >
+            <path
+              fill="#212121"
+              fill-rule="evenodd"
+              d="M10.904,6h26.191C39.804,6,42,8.196,42,10.904v26.191 C42,39.804,39.804,42,37.096,42H10.904C8.196,42,6,39.804,6,37.096V10.904C6,8.196,8.196,6,10.904,6z"
+              clip-rule="evenodd"
+            ></path>
+            <path
+              fill="#ec407a"
+              fill-rule="evenodd"
+              d="M29.208,20.607c1.576,1.126,3.507,1.788,5.592,1.788v-4.011 c-0.395,0-0.788-0.041-1.174-0.123v3.157c-2.085,0-4.015-0.663-5.592-1.788v8.184c0,4.094-3.321,7.413-7.417,7.413 c-1.528,0-2.949-0.462-4.129-1.254c1.347,1.376,3.225,2.23,5.303,2.23c4.096,0,7.417-3.319,7.417-7.413L29.208,20.607L29.208,20.607 z M30.657,16.561c-0.805-0.879-1.334-2.016-1.449-3.273v-0.516h-1.113C28.375,14.369,29.331,15.734,30.657,16.561L30.657,16.561z M19.079,30.832c-0.45-0.59-0.693-1.311-0.692-2.053c0-1.873,1.519-3.391,3.393-3.391c0.349,0,0.696,0.053,1.029,0.159v-4.1 c-0.389-0.053-0.781-0.076-1.174-0.068v3.191c-0.333-0.106-0.68-0.159-1.03-0.159c-1.874,0-3.393,1.518-3.393,3.391 C17.213,29.127,17.972,30.274,19.079,30.832z"
+              clip-rule="evenodd"
+            ></path>
+            <path
+              fill="#fff"
+              fill-rule="evenodd"
+              d="M28.034,19.63c1.576,1.126,3.507,1.788,5.592,1.788v-3.157 c-1.164-0.248-2.194-0.856-2.969-1.701c-1.326-0.827-2.281-2.191-2.561-3.788h-2.923v16.018c-0.007,1.867-1.523,3.379-3.393,3.379 c-1.102,0-2.081-0.525-2.701-1.338c-1.107-0.558-1.866-1.705-1.866-3.029c0-1.873,1.519-3.391,3.393-3.391 c0.359,0,0.705,0.056,1.03,0.159V21.38c-4.024,0.083-7.26,3.369-7.26,7.411c0,2.018,0.806,3.847,2.114,5.183 c1.18,0.792,2.601,1.254,4.129,1.254c4.096,0,7.417-3.319,7.417-7.413L28.034,19.63L28.034,19.63z"
+              clip-rule="evenodd"
+            ></path>
+            <path
+              fill="#81d4fa"
+              fill-rule="evenodd"
+              d="M33.626,18.262v-0.854c-1.05,0.002-2.078-0.292-2.969-0.848 C31.445,17.423,32.483,18.018,33.626,18.262z M28.095,12.772c-0.027-0.153-0.047-0.306-0.061-0.461v-0.516h-4.036v16.019 c-0.006,1.867-1.523,3.379-3.393,3.379c-0.549,0-1.067-0.13-1.526-0.362c0.62,0.813,1.599,1.338,2.701,1.338 c1.87,0,3.386-1.512,3.393-3.379V12.772H28.095z M21.635,21.38v-0.909c-0.337-0.046-0.677-0.069-1.018-0.069 c-4.097,0-7.417,3.319-7.417,7.413c0,2.567,1.305,4.829,3.288,6.159c-1.308-1.336-2.114-3.165-2.114-5.183 C14.374,24.749,17.611,21.463,21.635,21.38z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </div>
+        <div class="sm-font-size  footer-icon">
+          <p>Terms and Conditions</p>
+          <p>Privacy Policy</p>
+          <p>Cookie Policy</p>
+          <p>Privacy Settings</p>
+        </div>
+        <p class="md-font-size t-center">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+      </div>
+    </footer>
 
     <!--===============================
         ========FOOTER PART END
